app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #e0d1d1;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #c21818;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}


.no-scroll-body {
  height: 100vh;
  overflow: hidden;
}



.paper-frame {
  height: 100%;
  overflow: hidden;
  box-sizing: border-box;
  background: #E1D5B4;
  padding: 5% 2% 1% 2%;
  position:relative;

}

.paper-frame::after {
  content: "";
  position: absolute;

  /* Instead of matching padding, match the actual inner-frame box */
  top: calc(5%);   
  left: calc(2%);
  right: calc(2%);
  bottom: calc(1%);

  border-radius: 40px;
  pointer-events: none;

  box-shadow:
    inset 0 0 25px rgba(0,0,0,0.25),
    inset 0 4px 8px rgba(0,0,0,0.15);
}
  

.inner-frame {
  border-radius: 40px;

  height: 100%;
  background: #E4D4A8;
  overflow-y: auto;
  

  scrollbar-width: none;
}

